--- a/phd-literature-review/package.json
+++ b/phd-literature-review/package.json
@@ -2,16 +2,17 @@
   "name": "phd-literature-review",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/robert-z-lehr.github.io/PhD-Literature-Review",
+  "homepage": "https://robert-z-lehr.github.io/PhD-Literature-Review",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "nth-check": "^2.1.1",
     "postcss": "^8.4.40",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,7 +41,17 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.40",
+    "webpack": "^5.75.0",
+    "lodash.template": "^4.5.0",
+    "serialize-javascript": "^5.0.1",
+    "terser": "^5.11.0"
+  },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "eslint-webpack-plugin": "^3.0.1",
+    "gh-pages": "^6.1.1",
+    "react-dev-utils": "^12.0.1"
   }
 }
