--- a/probability-and-statistics/package.json
+++ b/probability-and-statistics/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "phd-literature-review",
+  "name": "probability-and-statistics",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://robert-z-lehr.github.io/PhD-Literature-Review",
+  "homepage": "https://robert-z-lehr.github.io/P.S.",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
